# fastfreeze

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
scripts/: Dockerfile.build  Dockerfile.test  Dockerfile.test.ff_installed  build.sh  fastfreeze  fastfreeze_wrapper.sh  run_tests.sh
src/: consts.rs  container.rs  criu.rs  filesystem.rs  image_streamer.rs  lib.rs  lock.rs  logger.rs  main.rs  metrics.rs  shared_mem.rs  signal.rs  util.rs
src/cli/: checkpoint.rs  extract.rs  install.rs  main.rs  mod.rs  run.rs  wait.rs
src/image/: compression.rs  compressor.rs  encryption.rs  manifest.rs  mod.rs  shard.rs
src/process/: command.rs  error.rs  mod.rs  monitor.rs  process.rs  process_group.rs  spawn_with_pid.rs  stderr_logger.rs
src/store/: gs.rs  local.rs  mod.rs  s3.rs
src/virt/: elf_loader.rs  mod.rs  time.rs
tests/: common.py  docker.py  test_basic.py  test_metrics.py  test_privileges.py  test_time.py  util.py
tests/apps/: Makefile  time.c  time_namespace.c
