[package]
name = "fastfreeze"
version = "1.3.0"
authors = ["Nicolas Viennot <Nicolas.Viennot@twosigma.com>"]
edition = "2018"
description = "Turn-key solution for checkpoint/restore"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
nix = "0.17"
signal-hook = "0.3"
lazy_static = "1.4"
rand = "0.7"
url = "2.1"
chrono = "0.4"
hostname = "0.3"
caps = "0.5"

[profile.release]
lto = true
codegen-units = 1
